enhance impl